internal/services/testdata/golden/backendtrafficpolicy-preview/compression.yaml
|
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    labels:
      app.kubernetes.io/managed-by: fastgateway
      fastgateway.dev/gateway-id: 22222222-2222-2222-2222-222222222222
      fastgateway.dev/route-id: 11111111-1111-1111-1111-111111111111
    name: btp-11111111-btp
    namespace: gateway-ns
  spec:
    compressor:
    - gzip: {}
      type: Gzip
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: btp-11111111
