internal/services/testdata/golden/backendtrafficpolicy-preview/load-balancer.yaml
|
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    labels:
      app.kubernetes.io/managed-by: fastgateway
      fastgateway.dev/gateway-id: 22222222-2222-2222-2222-222222222222
      fastgateway.dev/route-id: 11111111-1111-1111-1111-111111111111
    name: btp-11111111-btp
    namespace: gateway-ns
  spec:
    loadBalancer:
      consistentHash:
        header:
          name: X-User-ID
        type: Header
      type: ConsistentHash
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: btp-11111111
